[project]
name = "market-hub-puller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "requests==2.32.5",
    "requests-futures==1.0.2",
    "urllib3==2.6.3",
]

[tool.ruff]
line-length = 88
target-version="py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "PL",   # Pylint rules (maximizes pylint coverage)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ty]
target-version="py314"
